--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,17 @@
 .pageHead {
 	margin-top: 5px;
-	color: orange;
+	color: lightgrey;
 	text-align: center;
 }
 .navList {
 	text-align: center;
+	margin-bottom: 20px;
+}
+.footer {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	text-align: center;
+	background-color: lightgrey;
 }
