--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,7 +67,7 @@
 }
 .gh-link {
 	background-image: url(../images/GitHub-Mark-64px.png);
-	z-index: -2;
+	z-index: ;
 }
 .aside-footer {
 	position: absolute;
